--- a/react-social-ui/public/index.html
+++ b/react-social-ui/public/index.html
@@ -5,6 +5,24 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
+
+<!--  Essential META Tags -->
+<meta property="og:title" content="geoLARP.com">
+<meta property="og:description" content="geo located Live Action Role Playing">
+<meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
+<meta property="og:url" content="https://geolarp.com">
+<meta name="twitter:card" content="summary_large_image">
+
+
+<!--  Non-Essential, But Recommended -->
+<meta property="og:site_name" content="geoLARP.com">
+<meta name="twitter:image:alt" content="live action role playing">
+
+
+<!--  Non-Essential, But Required for Analytics -->
+<!-- <meta property="fb:app_id" content="your_app_id" /> -->
+<!-- <meta name="twitter:site" content="@website-username"> -->
+
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,500&display=swap"
     rel="stylesheet">
