--- a/react-social-ui/public/index.html
+++ b/react-social-ui/public/index.html
@@ -9,7 +9,7 @@
 <!--  Essential META Tags -->
 <meta property="og:title" content="geoLARP.com">
 <meta property="og:description" content="geo located Live Action Role Playing">
-<meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
+<meta property="og:image" content="https://raw.githubusercontent.com/TurtleWolfe/devOps/main/Images/SocialApp.png">
 <meta property="og:url" content="https://geolarp.com">
 <meta name="twitter:card" content="summary_large_image">
 
