--- a/react-social-ui/public/index.html
+++ b/react-social-ui/public/index.html
@@ -9,9 +9,7 @@
 <!--  Essential META Tags -->
 <meta property="og:title" content="geoLARP.com">
 <meta property="og:description" content="geo located Live Action Role Playing">
-<meta property="og:image" content="https://githubusercontent.com/TurtleWolfe/devOps/main/Images/home01.png">
-<meta property="og:image" content="https://githubusercontent.com/TurtleWolfe/devOps/main/Images/profile01.png">
-<meta property="og:image" content="https://githubusercontent.com/TurtleWolfe/devOps/main/Images/profile02.png">
+<meta property="og:image" content="https://geolarp.com/devOps/react-social-ui/public/assets/geoLARP.png">
 <meta property="og:url" content="https://geolarp.com">
 <meta name="twitter:card" content="summary_large_image">
 
